--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,32 +7,61 @@
 
 .nft-table-container {
     max-height: 680px;
-    position: absolute;
+    position: relative;
     display: block;
     height: 100%;
     max-width: 680px;
     width: 100%;
     z-index: 1;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .content-container {
     position: absolute;
     width: 100%;
     height: 100%;
-    padding-top: 110px;
+    padding-top: 119px;
 }
 
 .content-title {
-    font-size: 35px;
+    font-size: 33px;
     -webkit-marquee-increment: 0vw;
     margin-top: 0;
     margin-bottom: 1vw;
     font-family: "Avenir Next Condensed", serif;
     font-weight: 900;
     font-style: normal;
+}
+
+.quantity-container {
+    max-width: 620px;
+}
+
+.quantity-box {
+    max-width: 110px;
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+    text-align: center;
+}
+
+.nft-radio-image {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+.quantity {
+    width: 100%;
+    display: block;
+    z-index: 2;
+    position: relative;
+    padding: 11% 0;
+    font-family: "Avenir Next Condensed", sans-serif;
+    font-weight: bold;
+    font-size: 1.7em;
+    color: #da813d;
 }
 
 @media (max-width: 768px) {
